2011-07-19 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py scripts/STATGUI.py : use re to search for node text and to filter RM
	* doc/src/* : updated figures and documentation

2011-07-13 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : When -A specified, don't use nodes.txt config file
	* scripts/STAT.in : set -A by default
	* scripts/STATGUI.py : set "Share App Nodes" to true by default
	* doc/src/stat_preferences.sgml : Updated note about nodes.txt

2011-06-21 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/stat_environment_variables.sgml : Clarified various paths to be full paths to files, not the containing directories

2011-06-17 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : use new Cray attributes in MRNet 3.1

2011-06-02 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STAT.in, scripts/STATGUI.in : set LMON_FE_ENGINE_TIMEOUT 
	* configure.ac : added getrlimit and setrlimit tests

2011-06-01 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py, scripts/STATGUI.py : added ability to search by hosts. Consolodated search by hosts, ranks, text into one button.

2011-05-26 Gregory L. Lee <lee218@llnl.gov>
	* examples/src/mpi_ringtopo.c : added option to sleep instead of hang
	* scripts/STATview.py : fixed temporal ordering handling of more than 10 comparisons (zero padding of TO strings)

2011-05-25 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : Bit remapRanksList now calculated from connected MRNet NetworkTopology object.  Added topologyChangeCb.  Now properly handles CP exit.
	* examples/src/rank_test.c : added new rank test

2011-05-20 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : adding recovery for BE exit with nodeRemovedCb, which recaculates remapRanksList.
	* scripts/STATview.py, scripts/STATGUI.py : moved helper functions to STAThelper.py

2011-05-12 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT.C : make STAT_TOPOLOGY_AUTO the default if none specified

2011-05-06 Gregory L. Lee <lee218@llnl.gov>